# Timber

./: .gitignore  Cargo.toml  LICENSE  README.md  todo.txt
migrations/: 0001_create_users.sql  0002_create_sessions.sql
models/: user.rs
src/: db.rs  main.rs  middleware.rs  routes.rs  state.rs
src/handlers/: auth.rs  index.rs
src/models/: session.rs
templates/: base.html  index.html
templates/auth/: login.html  register.html
